--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,8 +1,21 @@
-a{
+:root {
+    --back_color_1: rgb(18, 18, 49);
+}
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+a {
     color: white;
     text-decoration: none;
 }
-ul{
+
+ul {
     list-style: none;
 }
 
@@ -16,7 +29,7 @@ body {
 header {
     height: 100vh;
     background-image: url('../images/background_3.jpg');
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -27,7 +40,7 @@ header {
     backdrop-filter: blur(10px) brightness(0.5);
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -37,7 +50,7 @@ nav{
     font-size: 1.5rem;
 }
 
-ul{
+ul {
     display: flex;
     gap: 20px;
     margin: 0;
@@ -55,8 +68,80 @@ ul{
     font-size: 4rem;
     text-align: center;
 }
-.home-button{
+
+.home-button {
     font-size: 2rem;
     padding: 10px;
-    border: 1px, solid, white;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+
+.topics-container {
+    padding: 20px;
+    background-color: var(--back_color_1);
+}
+
+.content {
+    background-color: white;
+    border-radius: 5px;
+}
+
+.content-title {
+    margin: auto;
+    text-align: center;
+    font-size: xx-large;
+    padding: 20px;
+}
+
+.topic-cards {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 30px;
+}
+
+.card {
+    padding: 10px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+}
+
+.card:hover {
+    box-shadow: 0 0 5px 1px lightgray;
+    transition: .1s ease all;
+}
+
+.card-image {
+    border-radius: 5px;
+}
+
+.card-title {}
+
+.card-footer {
+    padding: 2px;
+}
+
+.card-description {
+    margin-top: 2px;
+    margin-bottom: 4px;
+    height: 50px;
+}
+
+.card-button {
+    color: black;
+    text-align: center;
+    padding: 4px;
+    display: block;
+    border-radius: 5px;
+}
+
+.card-button:hover {
+    color: white;
+    transition: .3s ease all;
+    background-color: var(--back_color_1);
+}
+
+footer {
+    color: white;
+    padding: 20px;
+    background-color: var(--back_color_1);
 }
