--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -33,7 +33,7 @@ header {
     background-image: url('../images/background_3.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-
+    background-position: center;
 }
 
 .header-container {
@@ -48,43 +48,57 @@ nav {
     padding-block: 10px;
     padding-inline: 30px;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
 }
 
-ul {
+.nav-brand {
+    margin-left: 100px;
+}
+
+nav>div>ul {
     display: flex;
-    gap: 20px;
-    margin: 0;
+    gap: 50px;
+    margin-right: 100px;
     padding: 0;
 }
 
 .home-title {
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-60%);
     color: white;
-    font-size: 4rem;
+    font-size: 3.5rem;
     text-align: center;
 }
 
+.home-button-container {
+    margin: auto;
+    margin-top: 50px;
+}
+
 .home-button {
-    display: inline;
+    display: flex;
     align-items: center;
     font-size: 2rem;
-    padding: 10px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
     border: 2px solid white;
     border-radius: 5px;
     transition: background-color .5s;
 }
-.home-button:hover{
+
+.home-button:hover {
     background-color: white;
     color: gray;
     border: 2px solid gray;
 }
-.home-button:hover>svg{
+
+.home-button:hover>svg {
     fill: gray;
 }
 
@@ -115,14 +129,12 @@ ul {
 .card {
     padding: 10px;
     border: 1px solid var(--back_color_3);
-    border-radius: 5px;    
-    transition: transform .2s ease;
+    border-radius: 5px;
+    transition: transform .05s ease;
 }
 
 .card:hover {
     box-shadow: 0 0 5px 1px var(--back_color_3);
-    /* transition: .1s ease all; */
-    transform: scale(1.05);
 }
 
 .card-image {
@@ -131,6 +143,7 @@ ul {
 
 .card-title {
     color: var(--back_color_2);
+    font-weight: bold;
 }
 
 .card-footer {
@@ -198,14 +211,20 @@ footer {
 }
 
 @media (max-width: 795px) {
-    .home-title{
+    .home-title {
         font-size: 2rem;
-        left:20%;
-        transform: translateX(-10%);
-       }
-    .topic-cards{
-        flex-direction: column;
+        transform: translateY(-100%);
     }
+
+    .topic-cards {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .card-image {
+        width: 100%;
+    }
+
     .footer-container {
         flex-direction: column;
         padding-left: 20px;
