--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -41,6 +41,7 @@ header {
 .header-container {
     height: 100%;
     backdrop-filter: blur(10px) brightness(0.3);
+    -webkit-backdrop-filter: blur(10px) brightness(0.3);
 }
 
 nav {
@@ -55,6 +56,7 @@ nav {
     font-size: 1.7rem;
     background-color: var(--back_color_4);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     box-shadow: 0 1px 5px 0 var(--back_color_2);
     z-index: 999;
 }
