--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -268,6 +268,14 @@ footer {
         justify-content: center;
     }
 
+    .ects-link{
+        display: none;
+    }
+
+    .nav-back{
+        justify-content: left;
+    }
+
     .nav-links {
         margin-right: 0;
     }
@@ -275,6 +283,10 @@ footer {
     .home-title {
         font-size: 2rem;
         transform: translateY(-100%);
+    }
+
+    main{
+        padding: 5px;
     }
 
     .card-image {
