--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -218,16 +218,15 @@ main {
 }
 
 .floating-button {
-    position: sticky;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 50%;
     display: flex;
     align-items: center;
-    bottom: 10px;
-    float: right;
-    padding: 10px;
-    z-index: 999;
-    border: 2px solid var(--back_color_3);
-    mix-blend-mode: difference;
-    border-radius: 50%;
+    mix-blend-mode: difference  ;
 }
 
 footer {
@@ -268,11 +267,11 @@ footer {
         justify-content: center;
     }
 
-    .ects-link{
+    .ects-link {
         display: none;
     }
 
-    .nav-back{
+    .nav-back {
         justify-content: left;
     }
 
@@ -285,7 +284,7 @@ footer {
         transform: translateY(-100%);
     }
 
-    main{
+    main {
         padding: 5px;
     }
 
