--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -16,10 +16,6 @@ figure {
     margin-right: 0;
 }
 
-header{
-    background-image: url('../images/background_5.webp');
-}
-
 .body-content {
     display: flex;
     background-color: var(--back_color_3);
@@ -81,7 +77,7 @@ aside {
 }
 
 .biblio {
-    margin-bottom: 0px;
+    /* margin-bottom: 0px; */
     width: 100%;
 }
 
@@ -89,10 +85,44 @@ aside {
     color: blue;
 }
 
+.page-nav-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+}
+
+.page-nav>a {
+    color: var(--back_color_1);
+    font-size: large;
+    display: flex;
+    align-content: center;
+    gap: 5px;
+    background-color: white;
+    padding: 20px 50px;
+    border-radius: 5px;
+}
+
 blockquote {
     background-color: var(--back_color_5);
     padding: 10px;
     border-radius: 5px;
+}
+
+.quote-footer{
+    display: flex;
+    justify-content: end;
+    gap: 5px;
+}
+
+.quote-img{
+    display: flex;
+    align-items: center;
+}
+
+.quote-footer-text{
+    display: flex;
+    align-items: center;
+    text-align: right;
 }
 
 .more-images {
@@ -130,6 +160,10 @@ blockquote {
 
     .subtopic {
         padding-left: 0;
+    }
+
+    .page-nav-word{
+        display: none;
     }
 
     .more-images {
