--- a/assets/css/topic_2.css
+++ b/assets/css/topic_2.css
@@ -1,3 +1,15 @@
 header{
     background-image: url('../images/cards/card-2.webp');
 }
+.mincontent{
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+
+}
+.mincontent-item{
+    width: 50%;
+    text-align: justify;
+    margin-top: 0;
+    margin-bottom: 0;
+}
